Made it responsive for medium sized devices

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <h1>I'm Shiana Khehra</h1>
         <h2>a junior full stack developer</h2>
         <img id="bottom-cloud" src="images/cloud.png" alt="cloud-img">
-        <img src="images/mountain.png" alt="mountain-img">
+        <img src="images/mountain.png" alt="mountain-img" class="mountain-image">
     </div>
     
     <div class="middle-container">
