Added projects page

--- a/index.html
+++ b/index.html
@@ -10,10 +10,14 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Merriweather+Sans&family=Montserrat&family=Sacramento&display=swap"
         rel="stylesheet">
+    <script src="https://kit.fontawesome.com/0303ed5244.js" crossorigin="anonymous"></script>
     <title>Shiana Khehra</title>
 </head>
 <body>
     <div class="top-container">
+        <div class="projects-top-link">
+            <a class="navbar-brand" href="projects.html"><h2>Projects &nbsp;<i class="fa-solid fa-arrow-up-right-from-square"></i></h2></a>
+        </div>
         <img id="top-cloud" src="images/cloud.png" alt="cloud-img">
         <h1>I'm Shiana Khehra</h1>
         <h2>a junior full stack developer</h2>
@@ -56,9 +60,14 @@
             </div>
         </div>
         <hr>
+        <div class="projects">
+            <img src="images/projects.png" alt="projects-photo" class="projects-pic">
+            <button class="btnn"><a class="btnn" href="projects.html">Check out my projects!</a></button>
+        </div>
+        <hr>
         <div class="contact-me">
             <h2>Get In Touch</h2>
-            <button class="btn"><a class="btn" href="mailto:shiana.khehra@gmail.com">CONTACT ME</a></button>
+            <button class="btnn"><a class="btnn" href="mailto:shiana.khehra@gmail.com">CONTACT ME</a></button>
         </div>
     </div>
     <br>
