added another project

--- a/projects.html
+++ b/projects.html
@@ -32,16 +32,21 @@
             <div class="carousel-inner">
                 <div class="carousel-item active tests">
                     <h3 class="desc">A simple design clone of TinDog website created with HTML, CSS and BootStrap. This website is responsive for all
-                    screen sizes.</h3>
+                        screen sizes.</h3>
                     <img src="images/tindog.png" alt="tindog-website-photo" class="tindog">
+                    <button class="btnn ss"><a class="btnn ss" href="https://shiana-khehra.github.io/TinDog-Design-Clone/">Visit
+                            site</a></button>
+                    <button class="btnn ss"><a class="btnn ss" href="https://github.com/shiana-khehra/TinDog-Design-Clone">Github
+                            code</a></button>
                 </div>
 
                 <div class="carousel-item tests">
-                    <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of their
-                        life.
-                        I think.</h2>
-                    <img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
-                    <em>Beverly, Illinois</em>
+                    <h3 class="desc">A mini drum kit where you can use your rhythmic skills to play your favorite sounds and music.</h3>
+                    <img src="images/drumkit.png" alt="drumkit-website-photo" class="tindog">
+                    <button class="btnn ss"><a class="btnn ss" href="https://shiana-khehra.github.io/Drum-Kit/">Visit
+                            site</a></button>
+                    <button class="btnn ss"><a class="btnn ss" href="https://github.com/shiana-khehra/Drum-Kit">Github
+                            code</a></button>
                 </div>
             </div>
         </div>
@@ -53,8 +58,8 @@
             data-bs-slide="next">
             <i class="fa-solid fa-chevron-right right fa-2x"></i>
 
-            <button class="btnn ss"><a class="btnn ss" href="https://shiana-khehra.github.io/TinDog-Design-Clone/">Visit site</a></button>
-            <button class="btnn ss"><a class="btnn ss" href="https://github.com/shiana-khehra/TinDog-Design-Clone">Github code</a></button>
+            <!-- <button class="btnn ss"><a class="btnn ss" href="https://shiana-khehra.github.io/TinDog-Design-Clone/">Visit site</a></button>
+            <button class="btnn ss"><a class="btnn ss" href="https://github.com/shiana-khehra/TinDog-Design-Clone">Github code</a></button> -->
         </button>
     </div>
 
