added a new project

--- a/projects.html
+++ b/projects.html
@@ -31,16 +31,6 @@
         <div id="carouselExampleControls" class="carousel slide">
             <div class="carousel-inner">
                 <div class="carousel-item active tests">
-                    <h3 class="desc">A simple design clone of TinDog website created with HTML, CSS and BootStrap. This website is responsive for all
-                        screen sizes.</h3>
-                    <img src="images/tindog.png" alt="tindog-website-photo" class="tindog">
-                    <button class="btnn ss"><a class="btnn ss" href="https://shiana-khehra.github.io/TinDog-Design-Clone/">Visit
-                            site</a></button>
-                    <button class="btnn ss"><a class="btnn ss" href="https://github.com/shiana-khehra/TinDog-Design-Clone">Github
-                            code</a></button>
-                </div>
-
-                <div class="carousel-item tests">
                     <h3 class="desc">A mini drum kit where you can use your rhythmic skills to play your favorite sounds and music.</h3>
                     <img src="images/drumkit.png" alt="drumkit-website-photo" class="tindog">
                     <button class="btnn ss"><a class="btnn ss" href="https://shiana-khehra.github.io/Drum-Kit/">Visit
@@ -48,6 +38,28 @@
                     <button class="btnn ss"><a class="btnn ss" href="https://github.com/shiana-khehra/Drum-Kit">Github
                             code</a></button>
                 </div>
+
+                <div class="carousel-item tests">
+                    <h3 class="desc">Whether you are getting bored or having a class with your friend, roll the dice and reach a
+                        decision
+                        with this dice game.</h3>
+                    <img src="images/dicegame.png" alt="dicegame-website-photo" class="tindog">
+                    <button class="btnn ss"><a class="btnn ss" href="https://shiana-khehra.github.io/Dice-game/">Visit
+                            site</a></button>
+                    <button class="btnn ss"><a class="btnn ss" href="https://github.com/shiana-khehra/Dice-game">Github
+                            code</a></button>
+                </div>
+                
+                <div class="carousel-item tests">
+                    <h3 class="desc">A simple design clone of TinDog website created with HTML, CSS and BootStrap. This website is
+                        responsive for all screen sizes.</h3>
+                    <img src="images/tindog.png" alt="tindog-website-photo" class="tindog">
+                    <button class="btnn ss"><a class="btnn ss" href="https://shiana-khehra.github.io/TinDog-Design-Clone/">Visit
+                            site</a></button>
+                    <button class="btnn ss"><a class="btnn ss" href="https://github.com/shiana-khehra/TinDog-Design-Clone">Github
+                            code</a></button>
+                </div>
+
             </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
