add new project

--- a/projects.html
+++ b/projects.html
@@ -45,6 +45,15 @@
                 </div>
 
                 <div class="carousel-item tests">
+                    <h3 class="desc">Test your memory and say bye to the boredom by playing the Simon Game.</h3>
+                    <img src="images/simon.png" alt="simon-website-photo" class="tindog">
+                    <button class="btnn ss"><a class="btnn ss" href="https://shiana-khehra.github.io/The-Simon-Game/">Visit
+                            site</a></button>
+                    <button class="btnn ss"><a class="btnn ss" href="https://github.com/shiana-khehra/The-Simon-Game">Github
+                            code</a></button>
+                </div>
+
+                <div class="carousel-item tests">
                     <h3 class="desc">A mini drum kit where you can use your rhythmic skills to play your favorite sounds
                         and music.</h3>
                     <img src="images/drumkit.png" alt="drumkit-website-photo" class="tindog">
