add new project

--- a/projects.html
+++ b/projects.html
@@ -54,6 +54,16 @@
                 </div>
 
                 <div class="carousel-item tests">
+                    <h3 class="desc">A to do list where you can save your daily goals as well as work goals (url/work). This web app is implemented by using
+                    node.js and express.js on server side, and EJS on front end.</h3>
+                    <img src="images/todo.png" alt="todo-website-photo" class="tindog">
+                    <button class="btnn ss"><a class="btnn ss" href="https://to-do-list-l0yy.onrender.com/">Visit
+                            site</a></button>
+                    <button class="btnn ss"><a class="btnn ss" href="https://github.com/shiana-khehra/todolist-v1">Github
+                            code</a></button>
+                </div>
+
+                <div class="carousel-item tests">
                     <h3 class="desc">A mini drum kit where you can use your rhythmic skills to play your favorite sounds
                         and music.</h3>
                     <img src="images/drumkit.png" alt="drumkit-website-photo" class="tindog">
