add new project

--- a/projects.html
+++ b/projects.html
@@ -45,6 +45,16 @@
                 </div>
 
                 <div class="carousel-item tests">
+                    <h3 class="desc">A personal blog website where you can publish your regular blogs and share your thoughts and ideas
+                        with your audience. This website is created using EJS on frontend and node.js and express.js on backend server.</h3>
+                    <img src="images/blog.png" alt="blog-website-photo" class="tindog">
+                    <button class="btnn ss"><a class="btnn ss" href="https://blog-website-76cu.onrender.com/">Visit
+                            site</a></button>
+                    <button class="btnn ss"><a class="btnn ss" href="https://github.com/shiana-khehra/blog-website">Github
+                            code</a></button>
+                </div>
+
+                <div class="carousel-item tests">
                     <h3 class="desc">Test your memory and say bye to the boredom by playing the Simon Game.</h3>
                     <img src="images/simon.png" alt="simon-website-photo" class="tindog">
                     <button class="btnn ss"><a class="btnn ss" href="https://shiana-khehra.github.io/The-Simon-Game/">Visit
