update todolist project information

--- a/projects.html
+++ b/projects.html
@@ -34,38 +34,12 @@
         <div id="carouselExampleControls" class="carousel slide">
             <div class="carousel-inner">
                 <div class="carousel-item active tests">
-                    <h3 class="desc">A web application where people can sign in to my regular newsletter mailing list. This application is created using HTML
-                    and CSS on the front-end and node.js, express.js and MailChimp List API are used to implement the backend server-side
-                    functionality. It is deployed with Render.</h3>
-                    <img src="images/newsletter.png" alt="newsletter-website-photo" class="tindog">
-                    <button class="btnn ss"><a class="btnn ss" href="https://newsleter-signup.onrender.com/">Visit
-                            site</a></button>
-                    <button class="btnn ss"><a class="btnn ss" href="https://github.com/shiana-khehra/Newsletter-Signup-App">Github
-                            code</a></button>
-                </div>
-
-                <div class="carousel-item tests">
-                    <h3 class="desc">A personal blog website where you can publish your regular blogs and share your thoughts and ideas
-                        with your audience. This website is created using EJS on frontend and node.js and express.js on backend server.</h3>
-                    <img src="images/blog.png" alt="blog-website-photo" class="tindog">
-                    <button class="btnn ss"><a class="btnn ss" href="https://blog-website-76cu.onrender.com/">Visit
-                            site</a></button>
-                    <button class="btnn ss"><a class="btnn ss" href="https://github.com/shiana-khehra/blog-website">Github
-                            code</a></button>
-                </div>
-
-                <div class="carousel-item tests">
-                    <h3 class="desc">Test your memory and say bye to the boredom by playing the Simon Game.</h3>
-                    <img src="images/simon.png" alt="simon-website-photo" class="tindog">
-                    <button class="btnn ss"><a class="btnn ss" href="https://shiana-khehra.github.io/The-Simon-Game/">Visit
-                            site</a></button>
-                    <button class="btnn ss"><a class="btnn ss" href="https://github.com/shiana-khehra/The-Simon-Game">Github
-                            code</a></button>
-                </div>
-
-                <div class="carousel-item tests">
-                    <h3 class="desc">A to do list where you can save your daily goals as well as work goals (url/work). This web app is implemented by using
-                    node.js and express.js on server side, and EJS on front end.</h3>
+                    <h4 class="desc">A to do list where you can save your daily goals and tasks. This web app is implemented by using node.js and express.js
+                    on server side, and EJS on front end. The items are stored in the MongoDB database.
+                    
+                    In order to create custom lists, just append the name of the list to the url and the new list will be created and stored
+                    in the database. For example, if you want to create a list named "home", append /home to the url and that list will be
+                    curated for you.</h4>
                     <img src="images/todo.png" alt="todo-website-photo" class="tindog">
                     <button class="btnn ss"><a class="btnn ss" href="https://to-do-list-l0yy.onrender.com/">Visit
                             site</a></button>
@@ -74,8 +48,38 @@
                 </div>
 
                 <div class="carousel-item tests">
-                    <h3 class="desc">A mini drum kit where you can use your rhythmic skills to play your favorite sounds
-                        and music.</h3>
+                    <h4 class="desc">A web application where people can sign in to my regular newsletter mailing list. This application is created using HTML
+                    and CSS on the front-end and node.js, express.js and MailChimp List API are used to implement the backend server-side
+                    functionality. It is deployed with Render.</h4>
+                    <img src="images/newsletter.png" alt="newsletter-website-photo" class="tindog">
+                    <button class="btnn ss"><a class="btnn ss" href="https://newsleter-signup.onrender.com/">Visit
+                            site</a></button>
+                    <button class="btnn ss"><a class="btnn ss" href="https://github.com/shiana-khehra/Newsletter-Signup-App">Github
+                            code</a></button>
+                </div>
+
+                <div class="carousel-item tests">
+                    <h4 class="desc">A personal blog website where you can publish your regular blogs and share your thoughts and ideas
+                        with your audience. This website is created using EJS on frontend and node.js and express.js on backend server.</h4>
+                    <img src="images/blog.png" alt="blog-website-photo" class="tindog">
+                    <button class="btnn ss"><a class="btnn ss" href="https://blog-website-76cu.onrender.com/">Visit
+                            site</a></button>
+                    <button class="btnn ss"><a class="btnn ss" href="https://github.com/shiana-khehra/blog-website">Github
+                            code</a></button>
+                </div>
+
+                <div class="carousel-item tests">
+                    <h4 class="desc">Test your memory and say bye to the boredom by playing the Simon Game.</h4>
+                    <img src="images/simon.png" alt="simon-website-photo" class="tindog">
+                    <button class="btnn ss"><a class="btnn ss" href="https://shiana-khehra.github.io/The-Simon-Game/">Visit
+                            site</a></button>
+                    <button class="btnn ss"><a class="btnn ss" href="https://github.com/shiana-khehra/The-Simon-Game">Github
+                            code</a></button>
+                </div>
+
+                <div class="carousel-item tests">
+                    <h4 class="desc">A mini drum kit where you can use your rhythmic skills to play your favorite sounds
+                        and music.</h4>
                     <img src="images/drumkit.png" alt="drumkit-website-photo" class="tindog">
                     <button class="btnn ss"><a class="btnn ss" href="https://shiana-khehra.github.io/Drum-Kit/">Visit
                             site</a></button>
@@ -84,10 +88,8 @@
                 </div>
 
                 <div class="carousel-item tests">
-                    <h3 class="desc">Whether you are getting bored or having a class with your friend, roll the dice and
-                        reach a
-                        decision
-                        with this dice game.</h3>
+                    <h4 class="desc">Whether you are getting bored or having a class with your friend, roll the dice and
+                        reach a decision with this dice game.</h4>
                     <img src="images/dicegame.png" alt="dicegame-website-photo" class="tindog">
                     <button class="btnn ss"><a class="btnn ss" href="https://shiana-khehra.github.io/Dice-game/">Visit
                             site</a></button>
@@ -96,9 +98,8 @@
                 </div>
 
                 <div class="carousel-item tests">
-                    <h3 class="desc">A simple design clone of TinDog website created with HTML, CSS and BootStrap. This
-                        website is
-                        responsive for all screen sizes.</h3>
+                    <h4 class="desc">A simple design clone of TinDog website created with HTML, CSS and BootStrap. This
+                        website is responsive for all screen sizes.</h4>
                     <img src="images/tindog.png" alt="tindog-website-photo" class="tindog">
                     <button class="btnn ss"><a class="btnn ss"
                             href="https://shiana-khehra.github.io/TinDog-Design-Clone/">Visit
@@ -107,7 +108,6 @@
                             href="https://github.com/shiana-khehra/TinDog-Design-Clone">Github
                             code</a></button>
                 </div>
-
             </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
