--- a/index.html
+++ b/index.html
@@ -38,15 +38,28 @@
                 <img src="images/skills.png" alt="skills image" class="skills-pic">
                 <table>
                     <tr>
-                        <td>HTML</td>
-                        <td>CSS</td>
+                        <td>HTML5</td>
+                        <td>CSS3</td>
                     </tr>
                     <tr>
                         <td>JavaScript</td>
                         <td>Bootstrap</td>
+                    </tr>
+                    <tr>
+                        <td>jQuery</td>
+                        <td>Express.js</td>
+                    </tr>
                     <tr>
                         <td>ReactJS</td>
                         <td>Node.js</td>
+                    </tr>
+                    <tr>
+                        <td>MongoDB</td>
+                        <td>Mongoose</td>
+                    </tr>
+                    <tr>
+                        <td>RESTful APIs</td>
+                        <td>MVC framework</td>
                     </tr>
                     <tr>
                         <td>Java</td>
@@ -55,6 +68,10 @@
                     <tr>
                         <td>SQL</td>
                         <td>PL/SQL</td>
+                    </tr>
+                    <tr>
+                        <td>DSA</td>
+                        <td>Git and GitHub</td>
                     </tr>
                 </table>
             </div>
