update information of blog-website project

--- a/projects.html
+++ b/projects.html
@@ -59,8 +59,11 @@
                 </div>
 
                 <div class="carousel-item tests">
-                    <h4 class="desc">A personal blog website where you can publish your regular blogs and share your thoughts and ideas
-                        with your audience. This website is created using EJS on frontend and node.js and express.js on backend server.</h4>
+                    <h4 class="desc">A personal blog website where you can publish your regular blogs and share your thoughts and ideas with the world. This
+                    website is created using HTML, CSS and Embedded JavaScript on frontend and node.js and express.js on backend server. The
+                    blogs are stored in MongoDB database.
+                    
+                    If you want to compose new blog post, just append /compose to the url of the website where the compose page appears.</h4>
                     <img src="images/blog.png" alt="blog-website-photo" class="tindog">
                     <button class="btnn ss"><a class="btnn ss" href="https://blog-website-76cu.onrender.com/">Visit
                             site</a></button>
