--- a/index.html
+++ b/index.html
@@ -73,6 +73,10 @@
                         <td>DSA</td>
                         <td>Git and GitHub</td>
                     </tr>
+                    <tr>
+                        <td>JSON</td>
+                        <td>WordPress</td>
+                    </tr>
                 </table>
             </div>
         </div>
